Added command line options. Removed the need for the img2cow script. Added some demo cows.

--- a/extra/Makefile
+++ b/extra/Makefile
@@ -1,10 +1,18 @@
 
+all: xterm-256color.gpl cows
+
+.PHONY: all cows install-cows clean
+
 xterm-256color.gpl: xterm2gimppal
 	./xterm2gimppal > $@
 
-.PHONY: all clean
+%.cow: %.png ../img2xterm
+	img2xterm -c $< $@
 
-all: xterm-256color.gpl
+cows: $(patsubst %.png,%.cow,$(wildcard cows/*.png))
+
+install-cows: cows
+	install -m 644 cows/*.cow /usr/share/cows
 
 clean:
 	-rm -f xterm-256color.gpl xterm2gimppal
