Clean up extras.

--- a/extra/Makefile
+++ b/extra/Makefile
@@ -1,3 +1,5 @@
+INSTALL = install
+COWDIR = /usr/share/cows
 
 all: xterm-256color.gpl cows
 
@@ -7,7 +9,7 @@ xterm-256color.gpl: xterm2gimppal
 	./xterm2gimppal > $@
 
 %.cow: %.png ../img2xterm
-	img2xterm -ytcw 1.5 $< $@
+	../img2xterm -ytcw 1.5 $< $@
 
 ../img2xterm:
 	@echo "error: img2xterm must be compiled before the cowfiles can be made"
@@ -17,8 +19,8 @@ xterm-256color.gpl: xterm2gimppal
 cows: $(patsubst %.png,%.cow,$(wildcard cows/*.png))
 
 install-cows: cows
-	install -m 644 cows/*.cow /usr/share/cows
+	$(INSTALL) -D -m 644 cows/*.cow $(COWDIR)
 
 clean:
-	-rm -f cows/*.cow
-	-rm -f xterm-256color.gpl xterm2gimppal
+	-$(RM) cows/*.cow
+	-$(RM) xterm-256color.gpl xterm2gimppal
